N-Puzzle/err.log
2105028.cpp:269:27: warning: missing terminating " character
  269 |     cout<<priority value: " << node->priority_value << endl;
      |                           ^
2105028.cpp:269:27: error: missing terminating " character
  269 |     cout<<priority value: " << node->priority_value << endl;
      |                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2105028.cpp: In function ‘search_node* puzze_solver(search_node*, std::string&)’:
2105028.cpp:269:11: error: ‘priority’ was not declared in this scope
  269 |     cout<<priority value: " << node->priority_value << endl;
      |           ^~~~~~~~
